--- a/CSS - My Site/styles.css
+++ b/CSS - My Site/styles.css
@@ -1,11 +1,22 @@
 body {
   margin: 0;
+  background-color: #E4F9F5;
+  font-family: 'Merriweather', serif;
 }
 
 h1 {
   margin-top: 0;
+  font-family: 'Sacramento', cursive;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
 }
 
 div {
-  background-color: #E4F9F5;
+  
 }
