--- a/CSS - My Site/styles.css
+++ b/CSS - My Site/styles.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  background-color: #E4F9F5;
   font-family: 'Merriweather', serif;
 }
 
@@ -17,6 +16,6 @@ h3 {
   font-family: 'Montserrat', sans-serif;
 }
 
-div {
-  
+.top-container {
+  background-color: #E4F9F5;
 }
